# crucible

./: .env.example  .gitignore  Crucible_PRD (7).md  DEVELOPMENT_PLAN.md  ENVIRONMENT_AND_SECRETS_CHECKLIST.md  PYDANTIC_DOMAIN_MODELS.md  README.md  REPOSITORY_STRUCTURE.md  conftest.py  pyproject.toml
apps/api/: README.md
apps/api/src/crucible_api/: __init__.py  main.py  settings.py
apps/api/src/crucible_api/routes/: health.py  runs.py
apps/api/src/crucible_api/services/: run_service.py
apps/api/tests/: test_runs.py
apps/web/: package-lock.json  package.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: brief-form.tsx  result-panel.tsx
apps/web/src/lib/: api.ts  types.ts
configs/: judge.yaml  models.yaml  storage.yaml
configs/rubrics/: ecommerce-product-shot.yaml
examples/ecommerce-product-shot/: brief.json
infra/modal/: app.py
infra/vercel/: project.md
scripts/: phase0_generate.py  verify_manifest.py
